# Project-Chimera-The-Agentic-Infrastructure-Challenge

./: .coderabbit.yaml  Dockerfile  Makefile  README.md  main.py  pyproject.toml
.cursor/: rules.md
.github/workflows/: main.yml
research/: architecture_strategy.md  tooling_strategy.md
skills/: README.md
specs/: _meta.md  frontend.md  functional.md  openclaw_integration.md  security.md  technical.md
tests/: test_skills_interface.py  test_trend_fetcher.py
